--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES
     src/Scanner.cpp
     src/Parser.cpp
     src/Interpreter.cpp
+    src/Environment.cpp
 )
 
 add_executable(cpplox ${SOURCES})
