--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,27 +2,16 @@ cmake_minimum_required(VERSION 3.10)
 
 project(cpplox LANGUAGES CXX)
 
-set(SOURCES
-    src/ast_printer.cpp
-    src/environment.cpp
-    src/interpreter.cpp
-    src/lox.cpp
-    src/main.cpp
-    src/object.cpp
-    src/parser.cpp
-    src/resolver.cpp
-    src/scanner.cpp
-    src/token.cpp
-)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(cpplox ${SOURCES})
+file(GLOB TREEWALK_SOURCES ${CMAKE_SOURCE_DIR}/treewalk/src/*)
+add_library(treewalk STATIC ${TREEWALK_SOURCES})
+target_include_directories(treewalk PUBLIC ${CMAKE_SOURCE_DIR}/treewalk/include)
 
-set_target_properties(cpplox PROPERTIES
-    CXX_STANDARD 17
-    CXX_STANDARD_REQUIRED ON
-)
+file(GLOB BYTECODE_SOURCES ${CMAKE_SOURCE_DIR}/bytecode/src/*)
+add_library(bytecode STATIC ${BYTECODE_SOURCES})
+target_include_directories(bytecode PUBLIC ${CMAKE_SOURCE_DIR}/bytecode/include)
 
-target_include_directories(cpplox
-    PRIVATE
-        ${CMAKE_SOURCE_DIR}/include
-)
+add_executable(cpplox main.cpp)
+target_link_libraries(cpplox treewalk bytecode)
